# bifrost-frontier

./: Cargo.toml  rust-toolchain.toml
.github/: dependabot.yml
.maintain/: release-polkadot-branch.sh
client/bifrost/evm-tracing/: Cargo.toml
client/bifrost/evm-tracing/src/formatters/: blockscout.rs  call_tracer.rs  mod.rs  trace_filter.rs
client/bifrost/evm-tracing/src/listeners/: call_list.rs  raw.rs
client/bifrost/evm-tracing/src/types/: block.rs  mod.rs  serialization.rs  single.rs
client/bifrost/rpc-core/debug/: Cargo.toml
client/bifrost/rpc-core/debug/src/: lib.rs
client/bifrost/rpc-core/trace/: Cargo.toml
client/bifrost/rpc-core/txpool/: Cargo.toml
client/bifrost/rpc-core/txpool/src/types/: mod.rs
client/bifrost/rpc-core/types/: Cargo.toml
client/bifrost/rpc/debug/: Cargo.toml
client/bifrost/rpc/debug/src/: lib.rs
client/bifrost/rpc/trace/: Cargo.toml
client/bifrost/rpc/trace/src/: lib.rs
client/bifrost/rpc/txpool/: Cargo.toml
client/bifrost/rpc/txpool/src/: lib.rs
client/cli/: Cargo.toml
client/consensus/: Cargo.toml
client/db/: Cargo.toml
client/db/src/: upgrade.rs
client/db/src/kv/: upgrade.rs
client/mapping-sync/: Cargo.toml
client/rpc/: Cargo.toml  build.rs
client/rpc-core/src/types/: transaction.rs
client/rpc/src/: lib.rs  signer.rs  web3.rs
client/rpc/src/eth/: client.rs  execute.rs  filter.rs  transaction.rs
client/rpc/src/overrides/: schema_v1_override.rs  schema_v2_override.rs  schema_v3_override.rs
client/storage/: Cargo.toml
client/util/version/: Cargo.toml  build.rs
client/util/version/src/: lib.rs
docs/: node-template-release.md
frame/base-fee/: Cargo.toml
frame/dynamic-fee/: Cargo.toml
frame/ethereum/: Cargo.toml
frame/ethereum/src/: lib.rs  mock.rs
frame/ethereum/src/tests/: eip7702.rs
frame/evm/: Cargo.toml
frame/evm-chain-id/: Cargo.toml
frame/evm/precompile/bn128/: Cargo.toml
frame/evm/precompile/dispatch/: Cargo.toml
frame/evm/precompile/dispatch/src/: lib.rs  mock.rs
frame/evm/precompile/simple/: Cargo.toml
frame/evm/src/: lib.rs  mock.rs  tests.rs
frame/evm/src/runner/: stack.rs
frame/evm/test-vector-support/: Cargo.toml
frame/hotfix-sufficients/: Cargo.toml
precompiles/src/: precompile_set.rs
precompiles/src/solidity/codec/: native.rs
precompiles/tests-external/: lib.rs
primitives/bifrost/evm-tracing-events/: Cargo.toml
primitives/bifrost/ext/: Cargo.toml
primitives/bifrost/ext/src/: lib.rs
primitives/bifrost/rpc-txpool/: Cargo.toml
primitives/bifrost/rpc/debug/: Cargo.toml
primitives/bifrost/rpc/debug/src/: lib.rs
primitives/bifrost/rpc/evm-tracing-events/: Cargo.toml
primitives/bifrost/rpc/evm-tracing-events/src/: evm.rs  lib.rs  runtime.rs
primitives/bifrost/rpc/txpool/: Cargo.toml
primitives/bifrost/rpc/txpool/src/: lib.rs
primitives/consensus/: Cargo.toml
primitives/dynamic-fee/: Cargo.toml
primitives/ethereum/: Cargo.toml
primitives/ethereum/src/: lib.rs
primitives/evm/: Cargo.toml
primitives/evm/src/: lib.rs  validation.rs
primitives/rpc/: Cargo.toml
primitives/self-contained/: Cargo.toml
runtime/evm-tracer/: Cargo.toml
runtime/evm-tracer/src/: lib.rs
template/node/: Cargo.toml
template/node/src/: eth.rs  service.rs
template/node/src/rpc/: eth.rs
template/runtime/: Cargo.toml
template/runtime/src/: lib.rs
