[package]
name = "fp-consensus"
version = "2.0.0-dev"
license = "Apache-2.0"
description = "Primitives for Frontier consensus."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
ethereum = { workspace = true, features = ["with-codec"] }
scale-codec = { package = "parity-scale-codec", workspace = true }
# Substrate
sp-core = { version = "7.0.0", git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.37", default-features = false }
sp-runtime = { version = "7.0.0", git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.37", default-features = false }
sp-std = { version = "5.0.0", git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.37", default-features = false }

[features]
default = ["std"]
std = [
	"ethereum/std",
	"scale-codec/std",
	# Substrate
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
