[package]
name = "fp-ethereum"
version = "1.0.0-dev"
license = "Apache-2.0"
description = "Primitive Ethereum types."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { workspace = true, features = ["with-codec"] }
ethereum-types = { workspace = true }
num_enum = { version = "0.5.4", default-features = false }
scale-codec = { package = "parity-scale-codec", workspace = true }
# Substrate
sp-core = { version = "7.0.0", git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.32", default-features = false }
sp-std = { version = "5.0.0", git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.32", default-features = false }
# Substrate FRAME
frame-support = { version = "4.0.0-dev", git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.32", default-features = false }

[features]
default = ["std"]
std = [
	"ethereum/std",
	"ethereum-types/std",
	"num_enum/std",
	"scale-codec/std",
	# Substrate
	"frame-support/std",
	"sp-std/std",
	# Frontier
	"fp-evm/std",
]
