[package]
name = "fp-evm"
version = "3.0.0-dev"
license = "Apache-2.0"
description = "Primitive EVM abstractions for Substrate."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
evm = { workspace = true, features = ["with-codec"] }
scale-codec = { package = "parity-scale-codec", workspace = true }
serde = { workspace = true, optional = true }
# Substrate
sp-core = { version = "7.0.0", git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35", default-features = false }
sp-std = { version = "5.0.0", git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35", default-features = false }
# Substrate FRAME
frame-support = { version = "4.0.0-dev", git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35", default-features = false }

[features]
default = ["std"]
std = [
	"evm/std",
	"evm/with-serde",
	"serde",
	"scale-codec/std",
	# Substrate
	"frame-support/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
