[package]
name = "fp-rpc"
version = "3.0.0-dev"
license = "Apache-2.0"
description = "Runtime primitives for Ethereum RPC (web3) compatibility layer for Substrate."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { workspace = true, features = ["with-codec"] }
ethereum-types = { workspace = true }
scale-codec = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }
# Substrate
sp-api = { version = "4.0.0-dev", git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35", default-features = false }
sp-core = { version = "7.0.0", git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35", default-features = false }
sp-io = { version = "7.0.0", git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35", default-features = false }
sp-runtime = { version = "7.0.0", git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35", default-features = false }
sp-std = { version = "5.0.0", git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.35", default-features = false }

# Frontier
fp-evm = { workspace = true }

[features]
default = ["std"]
std = [
	"ethereum/std",
	"ethereum-types/std",
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	# Frontier
	"fp-evm/std",
]
