[package]
name = "evm-tracer"
authors = [ "bifrost-platform" ]
edition = "2021"
homepage = "https://thebifrost.io"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-frontier"
version = "0.1.0"

[dependencies]
fp-rpc-evm-tracing-events = { workspace = true, features = [ "evm-tracing" ] }
fp-ext = { workspace = true }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Frontier
ethereum-types = { version = "0.14", default-features = false }
evm = { version = "0.37.0", default-features = false, features = [ "with-codec" ] }
evm-gasometer = { version = "0.37.0", default-features = false }
evm-runtime = { version = "0.37.0", default-features = false }
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = [ "forbid-evm-reentrancy" ] }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"ethereum-types/std",
	"evm-gasometer/std",
	"evm-runtime/std",
	"evm/std",
	"evm/with-serde",
	"fp-rpc-evm-tracing-events/std",
	"fp-evm/std",
	"fp-ext/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]